--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,20 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, font-family:ProximaNova,Arial,Tahoma,PingFangSC,sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@font-face{
+  font-family: 'Proxima Nova';
+  src: url('assets/Proxima-Nova-Regular.woff2')
+  format('woff2');
+  font-weight: 400;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@font-face{
+  font-family: 'Proxima Nova';
+  src: url('assets/Proxima-Nova-Semibold.woff2')
+  format('woff2');
+  font-weight: 600;
+}
+
+body {
+  margin: 0;
+  font-family:'Proxima Nova',Arial,Tahoma,PingFangSC,sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
